package buckpal.business.service;

import buckpal.business.dto.BalanceQuery;
import buckpal.business.model.Money;
import buckpal.data.repository.IAccountJpaRepository;
import buckpal.data.repository.IActivityJpaRepository;
import buckpal.business.repository.AccountMapper;
import buckpal.data.entity.ActivityJpaEntity;
import lombok.RequiredArgsConstructor;

import jakarta.persistence.EntityNotFoundException;
import org.springframework.stereotype.Service;

import java.util.List;

@RequiredArgsConstructor
@Service
public class AccountBalanceService {

	private final IAccountJpaRepository accountRepository;
	private final IActivityJpaRepository activityRepository;
	private final AccountMapper accountMapper;

	public Money getAccountBalance(BalanceQuery query) {
		// Load account using JpaRepository directly
		var accountJpaEntity = accountRepository.findById(query.accountId().getValue())
				.orElseThrow(() -> new EntityNotFoundException(
						"Account with ID " + query.accountId().getValue() + " not found"));
		List<ActivityJpaEntity> activities = activityRepository.findByOwner(query.accountId().getValue());
		return accountMapper.mapToDomainEntity(accountJpaEntity, activities)
				.calculateBalance();
	}
}
