package buckpal.data.repository;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.Query;
import org.springframework.data.repository.query.Param;

import buckpal.data.entity.ActivityJpaEntity;

import java.time.LocalDateTime;
import java.util.List;
import java.util.Optional;

public interface IActivityJpaRepository extends JpaRepository<ActivityJpaEntity, Long> {

	@Query("""
			select a from ActivityJpaEntity a
			where a.ownerAccountId = :ownerAccountId
			""")
	List<ActivityJpaEntity> findByOwner(
			@Param("ownerAccountId") long ownerAccountId);

	@Query("""
			select sum(a.amount) from ActivityJpaEntity a
			where a.targetAccountId = :accountId
			and a.ownerAccountId = :accountId
			and a.timestamp < :until
			""")
	Optional<Long> getDepositBalanceUntil(
			@Param("accountId") long accountId,
			@Param("until") LocalDateTime until);

	@Query("""
			select sum(a.amount) from ActivityJpaEntity a
			where a.sourceAccountId = :accountId
			and a.ownerAccountId = :accountId
			and a.timestamp < :until
			""")
	Optional<Long> getWithdrawalBalanceUntil(
			@Param("accountId") long accountId,
			@Param("until") LocalDateTime until);

}
