' Generated by UML Generator
' Encoded: pLXRRzis57xFhz2ZlCH6zYgqHftB1WzkqoLkDtGO2bfY72wKgEgIDElQtxv3IgHubOoW3tqeKlDS-9qBoU_eLTsWgcbpUbJVaw945SgZbAAwNZLDHNPjWzSfAsx8lpWwFReZ6OvIKgKK7nq9hUYiJU_V8dhEYbkoRolK45QyhLY9guRWElfo54Npfa95VOkhxLs5wpj6ioIYhDX7BwCD_5cyNltvyVrgy-xowAlbTLMMbAJ2f_1q_0NGDYJz6kM8536gzdKItG3EOl_NtxCaUc0a6voiqfIrHVCQbO2ciyzHkMKNZ5jV5WrfdcBKAILI-xSITPAJ2AKDUI0yZ2JQaBfviUeMdfJESgRimFituLqg_K6AZ3t6XphHZHHIfIFTF0sgcfLIqsFlH5q1I3OehpE-mXuBNFNGrvcAOg6Mk5BDsYh5KrhGFtlSJ6gH74FnyXBIm594Br23jx36PJahC4Jscl_Xl-Sy0H9lF0dr99e6UX9DmmIT0CYJI8SuSzEyphf4Fo3QuaIqjTE7UYcqnEnGZIafy1cYg4YnbWPaD8MdIRf4gJFnI9exreBRsEzJTNJ0ez7CfblmYPpCyOnzZvsWBE0VrgvAVj8HVQ4sM78v529jAPIYtuIhoYHnOzyo1vrLw37M2nTkWdK6nZl6A4Q5w4W4I3qU3AtZ39Ui9esrHwWPZJtivXXj8E7OkW0_N5vVzLl2FIh-BjXjVBgPYTR9kqljZEpNHOFtk5BjGkgt73Hvm5VL1rons8o9r6_m7d6n8v1sZk3N2aDru7f7nLLr-Qb5TCj6qcOOZEYfM26kFY_ysT3Bh5HG1XsgIh0R_2dLd1HjRU-cf2KT4QfTwdO7RrdQJ6nLy0ng_UXS5zqfw2eUV22MpbKuzQGiPnFQwkteJyuDV_ktyjBZWEsxcMjT5jcuZdD0qSWjQntUbO8dNDi9E8R2gfV0-mXwt_mUo0sk7aYAPQA5wBexjAm2D-lXqH-MzQlNKbRFhQsj4Ot4v1sgYCEz8xFqgSNSR__pT_xBrpB2vgBRy4SAIDv-ASjpL42fUupdtU-HouvNUKNfZnGCvP0wYTw8Oc7f123VXXyf0lNYgNf8b2C54SssxUcvJTjpz9daRRvrsRlpxFpyyVJqbF_Rp9nadOlB_jcf4i6bmaUlCaJOkHxY6uYL3U865vb0-rrBjeCnfKHqaQ46BIebM4oM4gxG-s4l_alnOBSQIQXC1_T6BQCVKgSIudO7MALtEBrN1H-rCkzVPNFvESKum-9lEGnmONdSMFqbI2Hm2PTr-sREVhxp9ohUZKwfoSGKEmjN030H85ZLBOAUqkify7oZy3_PjSZF24N-GBN2aFmQ7wAj4l66NPNsdiU7xtdyd3qb2nGPUOyeWUPd_NXDQh4WsLfVnfH1XZu36uNqri2V867AxhoJ-UwcNaVMTgvOs8CqJg9X_vTm60dDBl0jQkdW_nVe8JXwyMm1xwzQZMVkzDHxnJ6Gl7zm2d2tMknkaOsZ3GXj9Sy5qFN4BV2oiwShFjKwistFRmCV2hWrXD6_iprlU0SogfUE-pY9MhviSJLznE8JXdGe7mf4luTFX-sg08O9MCmt4ry5VBdnVfMG0cUuam8v3L7VM3w2pXbklNDzB-MTN35A-qzDyc8scMZY9wYo6x-v954hmgPhZbvoZUiIpXCEFtKsejfw0vFGu_Xi-CCxunHf8ph8AL6tB0lKHwZm16CSg8qtwHO_ImAyxTbnAgw59YAH6mO3aGp63CEWEpOcWqyfI2P38WNSqUeuApYTQH2C8l3Uf9eZIEAVJ9wTKZbDJ6MqtouOGpzRs37e_Dv6P8uZ2f5l9D2tDJylBnPBvqO9gtWbnjUziCA8ID-v__xxqtokV_grrYLTDfQx2LH-jRGLXrMVdYy68_1kT9ZFbyhS-2J2D2-sJ7EZGTQ41Y3h4m27v-Vse_e-6XysCDctNyy1Qetsaq3z-YD0FGPUeDPOFWd4hpy2n6FW1MAFrvD80WOZK7mM9fRGQEnqlZdVJc8rrUsUzW-haqv35YCP6Dr4JAHZYg5vQCp6pE_8f3WS4U-anyNZ0rlOBeJR6DtCejX3rcBntz9CbAkXsmS6fj25fRrSMjAiLtE4wcb63gyxpCo_buToQJOsiph8oB-HGuaq2vFx16cBPc7HaqDC_B1SOg6PM1JY5IIupUd_
' URL: http://www.plantuml.com/plantuml/uml/pLXRRzis57xFhz2ZlCH6zYgqHftB1WzkqoLkDtGO2bfY72wKgEgIDElQtxv3IgHubOoW3tqeKlDS-9qBoU_eLTsWgcbpUbJVaw945SgZbAAwNZLDHNPjWzSfAsx8lpWwFReZ6OvIKgKK7nq9hUYiJU_V8dhEYbkoRolK45QyhLY9guRWElfo54Npfa95VOkhxLs5wpj6ioIYhDX7BwCD_5cyNltvyVrgy-xowAlbTLMMbAJ2f_1q_0NGDYJz6kM8536gzdKItG3EOl_NtxCaUc0a6voiqfIrHVCQbO2ciyzHkMKNZ5jV5WrfdcBKAILI-xSITPAJ2AKDUI0yZ2JQaBfviUeMdfJESgRimFituLqg_K6AZ3t6XphHZHHIfIFTF0sgcfLIqsFlH5q1I3OehpE-mXuBNFNGrvcAOg6Mk5BDsYh5KrhGFtlSJ6gH74FnyXBIm594Br23jx36PJahC4Jscl_Xl-Sy0H9lF0dr99e6UX9DmmIT0CYJI8SuSzEyphf4Fo3QuaIqjTE7UYcqnEnGZIafy1cYg4YnbWPaD8MdIRf4gJFnI9exreBRsEzJTNJ0ez7CfblmYPpCyOnzZvsWBE0VrgvAVj8HVQ4sM78v529jAPIYtuIhoYHnOzyo1vrLw37M2nTkWdK6nZl6A4Q5w4W4I3qU3AtZ39Ui9esrHwWPZJtivXXj8E7OkW0_N5vVzLl2FIh-BjXjVBgPYTR9kqljZEpNHOFtk5BjGkgt73Hvm5VL1rons8o9r6_m7d6n8v1sZk3N2aDru7f7nLLr-Qb5TCj6qcOOZEYfM26kFY_ysT3Bh5HG1XsgIh0R_2dLd1HjRU-cf2KT4QfTwdO7RrdQJ6nLy0ng_UXS5zqfw2eUV22MpbKuzQGiPnFQwkteJyuDV_ktyjBZWEsxcMjT5jcuZdD0qSWjQntUbO8dNDi9E8R2gfV0-mXwt_mUo0sk7aYAPQA5wBexjAm2D-lXqH-MzQlNKbRFhQsj4Ot4v1sgYCEz8xFqgSNSR__pT_xBrpB2vgBRy4SAIDv-ASjpL42fUupdtU-HouvNUKNfZnGCvP0wYTw8Oc7f123VXXyf0lNYgNf8b2C54SssxUcvJTjpz9daRRvrsRlpxFpyyVJqbF_Rp9nadOlB_jcf4i6bmaUlCaJOkHxY6uYL3U865vb0-rrBjeCnfKHqaQ46BIebM4oM4gxG-s4l_alnOBSQIQXC1_T6BQCVKgSIudO7MALtEBrN1H-rCkzVPNFvESKum-9lEGnmONdSMFqbI2Hm2PTr-sREVhxp9ohUZKwfoSGKEmjN030H85ZLBOAUqkify7oZy3_PjSZF24N-GBN2aFmQ7wAj4l66NPNsdiU7xtdyd3qb2nGPUOyeWUPd_NXDQh4WsLfVnfH1XZu36uNqri2V867AxhoJ-UwcNaVMTgvOs8CqJg9X_vTm60dDBl0jQkdW_nVe8JXwyMm1xwzQZMVkzDHxnJ6Gl7zm2d2tMknkaOsZ3GXj9Sy5qFN4BV2oiwShFjKwistFRmCV2hWrXD6_iprlU0SogfUE-pY9MhviSJLznE8JXdGe7mf4luTFX-sg08O9MCmt4ry5VBdnVfMG0cUuam8v3L7VM3w2pXbklNDzB-MTN35A-qzDyc8scMZY9wYo6x-v954hmgPhZbvoZUiIpXCEFtKsejfw0vFGu_Xi-CCxunHf8ph8AL6tB0lKHwZm16CSg8qtwHO_ImAyxTbnAgw59YAH6mO3aGp63CEWEpOcWqyfI2P38WNSqUeuApYTQH2C8l3Uf9eZIEAVJ9wTKZbDJ6MqtouOGpzRs37e_Dv6P8uZ2f5l9D2tDJylBnPBvqO9gtWbnjUziCA8ID-v__xxqtokV_grrYLTDfQx2LH-jRGLXrMVdYy68_1kT9ZFbyhS-2J2D2-sJ7EZGTQ41Y3h4m27v-Vse_e-6XysCDctNyy1Qetsaq3z-YD0FGPUeDPOFWd4hpy2n6FW1MAFrvD80WOZK7mM9fRGQEnqlZdVJc8rrUsUzW-haqv35YCP6Dr4JAHZYg5vQCp6pE_8f3WS4U-anyNZ0rlOBeJR6DtCejX3rcBntz9CbAkXsmS6fj25fRrSMjAiLtE4wcb63gyxpCo_buToQJOsiph8oB-HGuaq2vFx16cBPc7HaqDC_B1SOg6PM1JY5IIupUd_
' Generated on: 2026-02-28T06:37:13.971424171

@startuml
skinparam classAttributeIconSize 0
hide circle

class BuckPalConfigurationProperties {
  -transferThreshold: long = Long.MAX_VALUE
}

class BuckPalApplication {
  +{static} main(args: String[]): void
}

class AccountMapper {
  +mapToDomainEntity(account: AccountJpaEntity, activities: List<ActivityJpaEntity>): Account
  ~mapToActivityWindow(activities: List<ActivityJpaEntity>): ActivityWindow
  +mapToJpaEntity(activity: Activity): ActivityJpaEntity
}

class Activity {
  -id: ActivityId
  -ownerAccountId: Account.AccountId
  -sourceAccountId: Account.AccountId
  -targetAccountId: Account.AccountId
  -timestamp: LocalDateTime
  -money: Money
  --
  +Activity(ownerAccountId: Account.AccountId, sourceAccountId: Account.AccountId, targetAccountId: Account.AccountId, timestamp: LocalDateTime, money: Money)
}

class ActivityId {
  -value: Long
}

class Account {
  -id: AccountId
  -baselineBalance: Money
  -activityWindow: ActivityWindow
  --
  +{static} withoutId(baselineBalance: Money, activityWindow: ActivityWindow): Account
  +{static} withId(accountId: AccountId, baselineBalance: Money, activityWindow: ActivityWindow): Account
  +getId(): Optional<AccountId>
  +calculateBalance(): Money
  +getBalance(): Money
  +withdraw(money: Money, targetAccountId: AccountId): boolean
  -mayWithdraw(money: Money): boolean
  +deposit(money: Money, sourceAccountId: AccountId): boolean
}

class AccountId {
  -value: Long
}

class Money {
  +{static} ZERO: Money = Money.of(0L)
  -amount: BigInteger
  --
  +isPositiveOrZero(): boolean
  +isNegative(): boolean
  +isPositive(): boolean
  +isGreaterThanOrEqualTo(money: Money): boolean
  +isGreaterThan(money: Money): boolean
  +{static} of(value: long): Money
  +{static} add(a: Money, b: Money): Money
  +minus(money: Money): Money
  +plus(money: Money): Money
  +{static} subtract(a: Money, b: Money): Money
  +negate(): Money
}

class ActivityWindow {
  -activities: List<Activity>
  --
  +ActivityWindow(activities: List<Activity>)
  +ActivityWindow(activities: Activity)
  +getStartTimestamp(): LocalDateTime
  +getEndTimestamp(): LocalDateTime
  +calculateBalance(accountId: Account.AccountId): Money
  +getActivities(): List<Activity>
  +addActivity(activity: Activity): void
}

class AccountBalanceService {
  -accountRepository: IAccountJpaRepository
  -activityRepository: IActivityJpaRepository
  -accountMapper: AccountMapper
  --
  +getAccountBalance(query: BalanceQuery): Money
}

class AccountDepositService {
  -accountRepository: IAccountJpaRepository
  -activityRepository: IActivityJpaRepository
  -accountMapper: AccountMapper
  --
  +deposit(command: DepositCommand): boolean
}

class AccountListAllService {
  -accountRepository: IAccountJpaRepository
  -activityRepository: IActivityJpaRepository
  -accountMapper: AccountMapper
  --
  +listAccounts(): List<Account>
}

class AccountWithdrawService {
  -accountRepository: IAccountJpaRepository
  -activityRepository: IActivityJpaRepository
  -accountMapper: AccountMapper
  --
  +withdraw(command: WithdrawCommand): boolean
}

class MoneyTransferProperties {
  -maximumTransferThreshold: Money = Money.of(1_000_000L)
}

class AccountCreateService {
  -accountRepository: IAccountJpaRepository
  --
  +createAccount(command: CreateCommand): AccountId
}

class AccountSendMoneyService {
  -accountRepository: IAccountJpaRepository
  -activityRepository: buckpal.data.repository.IActivityJpaRepository
  -accountLock: IAccountLock
  -moneyTransferProperties: MoneyTransferProperties
  -accountMapper: AccountMapper
  --
  +sendMoney(command: SendMoneyCommand): boolean
  -checkThreshold(command: SendMoneyCommand): void
}

class ThresholdExceededException {
  +ThresholdExceededException(threshold: Money, actual: Money)
}

class BuckPalConfiguration {
  +moneyTransferProperties(buckPalConfigurationProperties: BuckPalConfigurationProperties): MoneyTransferProperties
}

interface IAccountLock {
  ~lockAccount(accountId: AccountId): void
  ~releaseAccount(accountId: AccountId): void
}

class NoOpAccountLock {
  +lockAccount(accountId: AccountId): void
  +releaseAccount(accountId: AccountId): void
}

class PositiveMoneyValidator {
  +isValid(value: Money, context: ConstraintValidatorContext): boolean
}

class Validation {
  -{static} validator: Validator = buildDefaultValidatorFactory().getValidator()
  --
  +{static} validate(subject: T): void
}

interface IAccountJpaRepository {
}

interface IActivityJpaRepository {
  ~findByOwner(ownerAccountId: long): List<ActivityJpaEntity>
  ~getDepositBalanceUntil(accountId: long, until: LocalDateTime): Optional<Long>
  ~getWithdrawalBalanceUntil(accountId: long, until: LocalDateTime): Optional<Long>
}

class ActivityJpaEntity {
  -id: Long
  -timestamp: LocalDateTime
  -ownerAccountId: long
  -sourceAccountId: long
  -targetAccountId: long
  -amount: long
}

class AccountJpaEntity {
  -id: Long
  -baselineBalance: Long
}

class AccountBalanceController {
  -accountBalanceService: AccountBalanceService
  --
  ~getAccountBalance(accountId: Long): BalanceResponse
}

class AccountSendMoneyController {
  -sendMoneyService: AccountSendMoneyService
  -accountBalanceService: AccountBalanceService
  --
  ~sendMoney(sourceAccountId: Long, targetAccountId: Long, amount: Long): SendMoneyResponse
}

class AccountWithdrawController {
  -accountWithdrawService: AccountWithdrawService
  -accountBalanceService: AccountBalanceService
  --
  ~withdraw(accountId: Long, amount: Long): WithdrawResponse
}

class AccountCreateController {
  -createAccountService: AccountCreateService
  --
  ~createAccount(initialBalance: Long): CreateResponse
}

class AccountDepositController {
  -accountDepositService: AccountDepositService
  -accountBalanceService: AccountBalanceService
  --
  ~deposit(accountId: Long, amount: Long): DepositResponse
}

class AccountListAllController {
  -listAccountsService: AccountListAllService
  --
  ~listAccounts(): ListResponse
}

AccountMapper ..> AccountJpaEntity
AccountMapper ..> Account
AccountMapper ..> ActivityWindow
AccountMapper ..> Activity
AccountMapper ..> ActivityJpaEntity
Activity *-- ActivityId
Activity *-- AccountId
Activity *-- Money
Account *-- AccountId
Account *-- Money
Account *-- ActivityWindow
Account ..> Account
Money --> Money
ActivityWindow o-- Activity
ActivityWindow ..> AccountId
ActivityWindow ..> Money
AccountBalanceService *-- IAccountJpaRepository
AccountBalanceService *-- IActivityJpaRepository
AccountBalanceService *-- AccountMapper
AccountBalanceService ..> Money
AccountDepositService *-- IAccountJpaRepository
AccountDepositService *-- IActivityJpaRepository
AccountDepositService *-- AccountMapper
AccountListAllService *-- IAccountJpaRepository
AccountListAllService *-- IActivityJpaRepository
AccountListAllService *-- AccountMapper
AccountWithdrawService *-- IAccountJpaRepository
AccountWithdrawService *-- IActivityJpaRepository
AccountWithdrawService *-- AccountMapper
MoneyTransferProperties *-- Money
AccountCreateService *-- IAccountJpaRepository
AccountCreateService ..> AccountId
AccountSendMoneyService *-- IAccountJpaRepository
AccountSendMoneyService *-- IActivityJpaRepository
AccountSendMoneyService *-- IAccountLock
AccountSendMoneyService *-- MoneyTransferProperties
AccountSendMoneyService *-- AccountMapper
ThresholdExceededException ..> Money
BuckPalConfiguration ..> BuckPalConfigurationProperties
BuckPalConfiguration ..> MoneyTransferProperties
IAccountLock ..> AccountId
NoOpAccountLock ..|> IAccountLock
NoOpAccountLock ..> AccountId
PositiveMoneyValidator ..> Money
AccountBalanceController *-- AccountBalanceService
AccountSendMoneyController *-- AccountSendMoneyService
AccountSendMoneyController *-- AccountBalanceService
AccountWithdrawController *-- AccountWithdrawService
AccountWithdrawController *-- AccountBalanceService
AccountCreateController *-- AccountCreateService
AccountDepositController *-- AccountDepositService
AccountDepositController *-- AccountBalanceService
AccountListAllController *-- AccountListAllService
@enduml